--- a/package.json
+++ b/package.json
@@ -3,9 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "create-react-class": "^15.6.3",
+    "firebase": "^5.5.8",
     "react": "^16.6.3",
+    "react-16-bootstrap-date-picker": "^5.1.2",
+    "react-bootstrap": "^0.32.4",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-select": "^2.1.2",
+    "react-slick": "^0.23.2",
+    "reactstrap": "^6.5.0",
+    "slick-carousel": "^1.8.1",
+    "url-loader": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
